# loop-pv

./: README.md  index.htlm  pyproject.toml  requirements.txt
data/: example_input.csv  template_schema.json
scripts/: app.py  dump_schema.py
src/chen_pv/: __init__.py  cli.py  core.py  excel_template.py  plotting.py
tests/: test_core.py
