[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chen-pv-loop"
version = "0.1.0"
description = "Extrair dados do template .xlsm e calcular métricas do loop Pressão–Volume (método de Chen)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1.2",
  "pandas>=2.0.0",
  "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[project.scripts]
chen-pv = "chen_pv.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
